tests/error/unknown_identifier.ca
int = make_stack()

testBlock = {

    print(a)
}

int.stack_push(block_ref(testBlock), [])
int.run

assert(int.error_message == "Unknown identifier: a")


